--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -204,14 +204,21 @@
         <%= cl_image_tag("slice-pill_bfxclr.png", :quality=>"auto") %>
         <%= cl_image_tag("dots-dots_mwj7rq.png", :quality=>"auto") %>
         <div class="third-section-media" data-aos="fade-right" data-aos-duration="2000">
-          <button class="third-section-play-button">
-            <h1>HELLO</h1>
-          </button>
+          <div class="request-loader" data-toggle="modal" data-target=".bd-example-modal-lg">
+            <span><%= image_tag "Play.png", alt: "alttext", width: 70, height: 70, id: "rel" %></span>
+          </div>
         </div>
         <div class="third-video-text">
           <h3><span>FX ONE</span> Printer</h3>
           <p>Helping businesses improve efficiency and lower production costs</p>
         </div>
+      </div>
+    </div>
+  </div>
+  <div id="modal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-cont" id="modal-cont">
+        <iframe class="embed-player" src="https://www.youtube-nocookie.com/embed/oMW-QEs1zmc?controls=0?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </div>
