--- a/app/views/pages/cost_of_ownership.html.erb
+++ b/app/views/pages/cost_of_ownership.html.erb
@@ -4,13 +4,13 @@
     <%= cl_image_tag("about-little-pill-sliced_z6varw.png", :quality=>"auto", class: "ownership-little-pill") %>
     <div class="container">
       <div class="nav-spacer"></div>
-      <div class="about-section about-first-section mobile-column">
-        <div class="about-first-section-left no-padding-mobile">
+      <div class="about-section about-first-section ownership-first-section small-column">
+        <div class="ownership-first-section-left no-padding-mobile">
           <h1 class="responsive-header"><%= t("cost_of_ownership.first_section_title") %> <span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo-right") %></span></h1>
           <p class="paragraph-text"><%= t("cost_of_ownership.first_section_text") %></p>
         </div>
-        <div class="about-first-section-right no-padding-mobile">
-          <%= cl_image_tag("ownership-graphic_fv4qk7.png", :quality=>"auto", class: "about-graphic") %>
+        <div class="ownership-first-section-right no-padding-mobile">
+          <%= cl_image_tag("Piggy_1_yrunnn.png", :quality=>"auto", class: "about-graphic position-relative") %>
         </div>
       </div>
     </div>
