--- a/app/views/pages/distributor.html.erb
+++ b/app/views/pages/distributor.html.erb
@@ -8,7 +8,7 @@
       </div>
       <div class="distributor-first-section-right d-flex justify-content-center">
         <%#= cl_image_tag("distributor-continents_l9lnki.png", :quality=>"auto", class: "distributor-graphic") %>
-        <%= image_tag 'map-animation.gif', class: 'fxone-first-section-image distributor-first-section-image' %>
+        <%= image_tag 'map-animation.gif', class: 'distributor-first-section-image' %>
       </div>
     </div>
   </div>
