--- a/app/views/pages/fxone_plus.html.erb
+++ b/app/views/pages/fxone_plus.html.erb
@@ -9,7 +9,7 @@
         <p class="paragraph-text about-second-section-text inks-card-text"><%= t("fxone_plus.first_section_text") %></p>
       </div>
       <div class="no-padding-mobile" style="position: relative;">
-        <%= cl_image_tag("fxone-plus_n6k9lj.png", :quality=>"auto", class: "fxone-first-section-image fxone-plus-graphic") %>
+        <%= cl_image_tag("fxone-plus_n6k9lj.png", :quality=>"auto", class: "fxone-first-section-image fxone-plus-graphic", style: 'width: 100%') %>
         <div class="coming-soon" style="background-image: url('<%= cl_image_path "coming-soon-background_wjcoct.png" %>')">
           <p class="coming-soon-text"><%= t("fxone_plus.coming_soon") %></p>
         </div>
