--- a/app/views/pages/fxone_remote.html.erb
+++ b/app/views/pages/fxone_remote.html.erb
@@ -4,10 +4,9 @@
     <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "fxone-little-pill") %>
     <div class="about-section fxone-section fxone-first-section">
       <!-- <div class="about-second-section-left no-padding-mobile"> -->
-        <%= cl_image_tag("fxone-remote-graphic-1_mxspzx.png", :quality=>"auto", class: "fxone-first-section-image") %>
+        <%= cl_image_tag("fxone-remote-graphic-1_rq5ho4.png", :quality=>"auto", class: "fxone-remote-first-section-image") %>
       <!-- </div> -->
-      <div class="no-padding-mobile fxone-first-section-text">
-
+      <div class="no-padding-mobile fxone-first-section-text fxone-first-section-text-right">
         <h1 class="responsive-header"><span><%= cl_image_tag("fxone-logo_zjjdvc.png", class: "fxone-logo") %></span> <%= t("fxone_remote.first_section_title") %></h1>
         <p class="paragraph-text about-second-section-text"><%= t("fxone_remote.first_section_text") %></p>
       </div>
