--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -267,55 +267,19 @@
   }
 }
 
-.fxone-first-section-text {
-  position: relative;
-  h1, p {
-    position: relative;
-    left: -200px;
-    @include for-xlarge-devices-down {
-      left: -150px;
-    }
-    @include for-large-devices-down {
-      left: -100px;
-    }
-    @include for-large-devices-down {
-      left: -50px;
-    }
-    @include for-small-devices-down {
-      left: 0;
-    }
-  }
-  @include for-small-devices-down {
-    padding-left: 30px;
-  }
+.fxone-first-section-text-right {
+  padding: 20px;
+  padding-right: 50px;
   @include for-phone-only {
-    width: 90%;
+    padding-left: 20px;
   }
 }
 
 .fxone-first-section-text-left {
-  position: relative;
-  h1, p {
-    position: relative;
-    right: -180px;
-    @include for-xlarge-devices-down {
-      right: -130px;
-    }
-    @include for-large-devices-down {
-      right: -100px;
-    }
-    @include for-large-devices-down {
-      right: -50px;
-    }
-    @include for-small-devices-down {
-      right: 0;
-    }
-  }
-  @include for-small-devices-down {
-    padding-left: 30px;
-  }
+  padding: 20px;
+  padding-left: 50px;
   @include for-phone-only {
-    width: 90%;
+    padding-left: 20px;
   }
 }
 
@@ -324,23 +288,20 @@
   padding-bottom: 100px;
 }
 
+.fxone-remote-first-section-image {
+  max-width: 800px;
+  width: 60%;
+  @include for-phone-only {
+    width: 90%;
+  }
+}
+
 .fxone-first-section-image {
-  width: 1000px;
-    @include for-xlarge-devices-down {
-      width: 700px;
-    }
-
-    @include for-large-devices-down {
-      width: 500px;
-    }
-
-    @include for-small-devices-down {
-      width: 60vw;
-    }
-
-    @include for-phone-only {
-      width: 100%;
-    }
+  max-width: 1000px;
+  width: 60%;
+  @include for-phone-only {
+    width: 90%;
+  }
 }
 
 .fxone-logo {
