--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,7 +22,7 @@
   }
 
   @include for-xsmall-phone-only {
-    height: 110vh;
+    // height: 110vh;
     justify-content: flex-start;
   }
 }
@@ -73,10 +73,11 @@
 }
 
 .first-section-text {
-  width: 400px;
+  width: 500px;
   position: relative;
   z-index:1;
   padding: 20px;
+  padding-left: 50px;
 
   & h1 {
     color: #0D1B26;
@@ -96,37 +97,32 @@
   }
 
   @include for-phone-only {
-    width: 80vw;
+    width: 100%;
+    padding-left: 20px;
+
 
     & h1 {
-      padding-top: 80px;
+      padding-top: 40px;
+      font-size: 35px;
+      width: 65%;
     }
 
     & p {
-      font-size: 18px;
+      font-size: 16px;
     }
   }
 }
 
 .first-section-image {
   position: relative;
+  display: flex;
+  justify-content: center;
   z-index:1;
 
   & img {
     height: auto;
-    width: 1000px;
-
-    @include for-xlarge-devices-down {
-      width: 700px;
-    }
-
-    @include for-large-devices-down {
-      width: 500px;
-    }
-
-    @include for-small-devices-down {
-      width: 60vw;
-    }
+    max-width: 1000px;
+    width: 90%;
   }
 }
 
