faq copy in, still needs work to make responsive and expandable tabs fit content

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -7,40 +7,135 @@
   <div class="space-40"></div>
   <div class="faq-card">
     <div class="faq-card-head" id="faqTrigger-1">
-      <p class="m-0 black-blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <p class="m-0 black-blue"><%= t('faq.title1') %></p>
       <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
     </div>
     <div class="faq-card-body" id="faqBody1">
-      <p class="light-gray-thin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
+      <p class="light-gray-thin-text"><%= t('faq.desc1') %><a target="_blank" href="https://www.youtube.com/watch?v=oMW-QEs1zmc"><%= t("faq.desc1vid") %></a><%= t('faq.desc1end') %></p>
     </div>
   </div>
   <div class="faq-card">
     <div class="faq-card-head" id="faqTrigger-2">
-      <p class="m-0 black-blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <p class="m-0 black-blue"><%= t('faq.title2') %></p>
       <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
     </div>
     <div class="faq-card-body" id="faqBody2">
-      <p class="light-gray-thin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
+      <p class="light-gray-thin-text"><%= t('faq.desc2') %>!</p>
+      <p class="light-gray-thin-text"><%= t('faq.desc2end') %></p>
     </div>
   </div>
   <div class="faq-card">
     <div class="faq-card-head" id="faqTrigger-3">
-      <p class="m-0 black-blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <p class="m-0 black-blue"><%= t('faq.title3') %></p>
       <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
     </div>
     <div class="faq-card-body" id="faqBody3">
-      <p class="light-gray-thin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
+      <p class="light-gray-thin-text"><%= t('faq.desc3') %></p>
     </div>
   </div>
   <div class="faq-card">
     <div class="faq-card-head" id="faqTrigger-4">
-      <p class="m-0 black-blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      <p class="m-0 black-blue"><%= t('faq.title4') %></p>
       <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
     </div>
     <div class="faq-card-body" id="faqBody4">
-      <p class="light-gray-thin-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est commodi ut perspiciatis nam optio aut veniam pariatur tempore consequatur repudiandae sunt molestiae omnis eveniet repellendus sequi, cumque voluptatem aspernatur tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sequi quas excepturi assumenda sed minus dolor nobis aut laborum molestiae voluptas eius, provident possimus iusto dolorum suscipit culpa.</p>
+      <p class="light-gray-thin-text"><%= t('faq.desc4_1') %>!</p>
+      <p class="light-gray-thin-text"><%= t('faq.desc4_2') %></p>
+      <p class="light-gray-thin-text"><%= t('faq.desc4_3') %></p>
+      <p class="light-gray-thin-text"><%= t('faq.desc4_4') %>:</p>
+      <ul>
+        <li><p class="light-gray-thin-text"><%= t('faq.desc4_5') %></p></li>
+        <li><p class="light-gray-thin-text"><%= t('faq.desc4_6') %></p></li>
+        <li><p class="light-gray-thin-text"><%= t('faq.desc4_7') %></p></li>
+      </ul>
+      <p class="light-gray-thin-text"><%= t('faq.desc4_8') %> <a href="/contact"><%= t('faq.desc4_9') %></a> <%= t('faq.desc4_10') %></p>
     </div>
   </div>
+  <div class="faq-card">
+    <div class="faq-card-head" id="faqTrigger-5">
+      <p class="m-0 black-blue"><%= t('faq.title5') %></p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
+    </div>
+    <div class="faq-card-body" id="faqBody5">
+      <p class="light-gray-thin-text"><%= t('faq.desc5') %></p>
+    </div>
+  </div>
+  <div class="faq-card">
+    <div class="faq-card-head" id="faqTrigger-6">
+      <p class="m-0 black-blue"><%= t('faq.title6') %></p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
+    </div>
+    <div class="faq-card-body" id="faqBody6">
+      <p class="light-gray-thin-text"><%= t('faq.desc6_1') %>! <%= t('faq.desc6_2') %><br><%= t('faq.desc6_3') %></p>
+      <p class="light-gray-thin-text italic"><%= t('faq.desc6_4') %></p>
+    </div>
+  </div>
+  <div class="faq-card">
+    <div class="faq-card-head" id="faqTrigger-7">
+      <p class="m-0 black-blue"><%= t('faq.title7') %></p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
+    </div>
+    <div class="faq-card-body" id="faqBody7">
+      <p class="light-gray-thin-text"><%= t('faq.desc7') %></p>
+    </div>
+  </div>
+  <div class="faq-card">
+    <div class="faq-card-head" id="faqTrigger-8">
+      <p class="m-0 black-blue"><%= t('faq.title8') %></p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
+    </div>
+    <div class="faq-card-body" id="faqBody8">
+      <p class="light-gray-thin-text"><%= t('faq.desc8_1') %><br><%= t('faq.desc8_2') %><br><%= t('faq.desc8_3') %><br><%= t('faq.desc8_4') %></p>
+      <p class="light-gray-thin-text"><%= t('faq.desc8_5') %><br><%= t('faq.desc8_6') %><br><%= t('faq.desc8_7') %><br><%= t('faq.desc8_8') %></p>
+    </div>
+  </div>
+  <div class="faq-card">
+    <div class="faq-card-head" id="faqTrigger-9">
+      <p class="m-0 black-blue"><%= t('faq.title9_1') %>: <%= t('faq.title9_2') %></p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
+    </div>
+    <div class="faq-card-body" id="faqBody9">
+      <p class="light-gray-thin-text"><%= t('faq.desc9') %></p>
+    </div>
+  </div>
+  <div class="faq-card">
+    <div class="faq-card-head" id="faqTrigger-10">
+      <p class="m-0 black-blue"><%= t('faq.title10') %></p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
+    </div>
+    <div class="faq-card-body" id="faqBody10">
+      <p class="light-gray-thin-text"><%= t('faq.desc10') %></p>
+    </div>
+  </div>
+  <div class="faq-card">
+    <div class="faq-card-head" id="faqTrigger-11">
+      <p class="m-0 black-blue"><%= t('faq.title11') %></p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
+    </div>
+    <div class="faq-card-body" id="faqBody11">
+      <p class="light-gray-thin-text"><%= t('faq.desc11_1') %><br><%= t('faq.desc11_2') %></p>
+
+    </div>
+  </div>
+  <div class="faq-card">
+    <div class="faq-card-head" id="faqTrigger-12">
+      <p class="m-0 black-blue"><%= t('faq.title12') %></p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
+    </div>
+    <div class="faq-card-body" id="faqBody12">
+      <p class="light-gray-thin-text"><%= t('faq.desc12_1') %><br><%= t('faq.desc12_2') %></p>
+    </div>
+  </div>
+  <div class="faq-card">
+    <div class="faq-card-head" id="faqTrigger-13">
+      <p class="m-0 black-blue"><%= t('faq.title13') %></p>
+      <i class="fas fa-chevron-down small-chevron m-0 yellow-arrow"></i>
+    </div>
+    <div class="faq-card-body" id="faqBody13">
+      <p class="light-gray-thin-text"><%= t('faq.desc13_1') %><br><%= t('faq.desc13_2') %></p>
+    </div>
+  </div>
+
   <div class="space-100"></div>
 </div>
 
