--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -80,12 +80,12 @@
   }
 
 
-  & span {
-    width: 50%;
-    background-color: #E0E1E5;
-    padding: 1px 0;
-    margin: 30px 0;
-  }
+  // & span {
+  //   width: 50%;
+  //   background-color: #E0E1E5;
+  //   padding: 1px 0;
+  //   margin: 30px 0;
+  // }
 
   @include for-large-devices-down {
     & img {
