--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -109,11 +109,13 @@
       </div>
       <div class="tabs-area">
         <%= cl_image_tag("long-pill_xrmujn.png", :quality=>"auto") %>
-        <div id="London" class="city" >
+        <div id="London" class="city" style="display: flex;">
           <div class="tab-text" >
             <h4><%= t("home.tabs_one_title") %></h4>
             <p><%= t("home.tabs_one_description") %></p>
-            <span></span>
+            <span class="progressHolder">
+              <span class="progress"></span>
+            </span>
             <p class="orange"><%= t("home.tabs_one_bottom") %></p>
             <br>
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
@@ -128,7 +130,9 @@
           <div class="tab-text"  >
             <h4><%= t("home.tabs_two_title") %></h4>
             <p><%= t("home.tabs_two_description") %></p>
-            <span></span>
+            <span class="progressHolder">
+              <span class="progress"></span>
+            </span>
             <p class="orange"><%= t("home.tabs_two_bottom") %></p>
             <br>
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
@@ -143,7 +147,9 @@
           <div class="tab-text">
             <h4><%= t("home.tabs_three_title") %></h4>
             <p><%= t("home.tabs_three_description") %></p>
-            <span></span>
+            <span class="progressHolder">
+              <span class="progress"></span>
+            </span>
             <p class="orange"><%= t("home.tabs_three_bottom") %></p>
             <br>
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
@@ -158,7 +164,9 @@
           <div class="tab-text">
             <h4><%= t("home.tabs_four_title") %></h4>
             <p><%= t("home.tabs_four_description") %></p>
-            <span></span>
+            <span class="progressHolder">
+              <span class="progress"></span>
+            </span>
             <p class="orange"><%= t("home.tabs_four_bottom") %></p>
             <br>
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
@@ -173,7 +181,9 @@
           <div class="tab-text">
             <h4><%= t("home.tabs_five_title") %></h4>
             <p><%= t("home.tabs_five_description") %></p>
-            <span></span>
+            <span class="progressHolder">
+              <span class="progress"></span>
+            </span>
             <p class="orange"><%= t("home.tabs_five_bottom") %></p>
             <br>
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
@@ -188,7 +198,9 @@
           <div class="tab-text">
             <h4><%= t("home.tabs_six_title") %></h4>
             <p><%= t("home.tabs_six_description") %></p>
-            <span></span>
+            <span class="progressHolder">
+              <span class="progress"></span>
+            </span>
             <p class="orange"><%= t("home.tabs_six_bottom") %></p>
             <br>
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
@@ -259,6 +271,42 @@
     for (i = 0; i < x.length; i++) {
       x[i].style.display = "none";
     }
-    document.getElementById(cityName).style.display = "flex";
+    const city = document.getElementById(cityName)
+    city.style.display = "flex";
+    tabTimer();
   }
+
+  // =======================
+  // TabTimer
+  // =======================
+  const tabTimer = () => {
+    const tabAreas = document.querySelectorAll('.city')
+    tabAreas.forEach((area) => {
+      if(area.getAttribute('style') == "display: flex;") {
+        const progressHolder = area.firstElementChild.getElementsByTagName('span')[0]
+        const progress = progressHolder.firstElementChild
+        progress.style.width = '1%'
+        var width = 1;
+        var id = setInterval(frame, 10);
+        function frame() {
+          if (width >= 100) {
+            clearInterval(id);
+            tabSwitcher();
+          } else {
+            width += 1;
+            progress.style.width = width + "%";
+          }
+        }
+      }
+    })
+  }
+  tabTimer()
+
+  // =======================
+  // TabSwitcher
+  // =======================
+  const tabSwitcher = () => {
+    console.log('not done yet')
+  }
+
 </script>
