Images resized to look better

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -206,7 +206,7 @@
             <a href="/" class="yellow-button"><%= t("components.yellow_button") %><i class="fas fa-arrow-right"></i></a>
             <br><br><br><br><br><br><br><br><br>
           </div>
-          <div  data-aos="fade-left" data-aos-duration="2000">
+          <div >
             <%= cl_image_tag("foenix-home-tab-1_mo3nfg.png", :quality=>"auto") %>
           </div>
         </div>
