--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -207,11 +207,15 @@
 
   & img:nth-child(1) {
     position: absolute;
-      right: -600px;
-      top: -200px;
-    width: 1100px;
+    right: 0px;
+    // right: -600px;
+    top: 50px;
+    // top: -200px;
+    width: 700px;
+    // width: 1100px;
     height: auto;
-    transform: rotate(-1deg);
+    transform: rotate(0deg);
+    // transform: rotate(-1deg);
   }
 
   @include for-medium-devices-down {
