--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -89,22 +89,22 @@
         <h2><%= t("home.tabs_title") %></h2>
       </div>
       <div class="tab">
-       <button class="cityTab" data-city="London" onclick="openCity('London')"><%= t("home.tabs_one") %></button>
-       <button class="cityTab" data-city="Paris" onclick="openCity('Paris')"><%= t("home.tabs_two") %></button>
-       <button class="cityTab" data-city="Tokyo" onclick="openCity('Tokyo')"><%= t("home.tabs_three") %></button>
-       <button class="cityTab" data-city="Bogota" onclick="openCity('Bogota')"><%= t("home.tabs_four") %></button>
-       <button class="cityTab" data-city="Lexico" onclick="openCity('Lexico')"><%= t("home.tabs_five") %></button>
-       <button class="cityTab" data-city="Brussels" onclick="openCity('Brussels')"><%= t("home.tabs_six") %></button>
+       <button class="cityTab" data-city="London" onclick="openCity('London', true)"><%= t("home.tabs_one") %></button>
+       <button class="cityTab" data-city="Paris" onclick="openCity('Paris', true)"><%= t("home.tabs_two") %></button>
+       <button class="cityTab" data-city="Tokyo" onclick="openCity('Tokyo', true)"><%= t("home.tabs_three") %></button>
+       <button class="cityTab" data-city="Bogota" onclick="openCity('Bogota', true)"><%= t("home.tabs_four") %></button>
+       <button class="cityTab" data-city="Lexico" onclick="openCity('Lexico', true)"><%= t("home.tabs_five") %></button>
+       <button class="cityTab" data-city="Brussels" onclick="openCity('Brussels', true)"><%= t("home.tabs_six") %></button>
       </div>
       <div class="features-dropdown" >
         <button class="" onclick="openCity('London')"><%= t("home.tabs_one") %>></button><i class="fas fa-chevron-down"></i>
         <div class="features-dropdown-options">
-          <button class="" onclick="openCity('London')"><%= t("home.tabs_one") %></button>
-          <button class="" onclick="openCity('Paris')"><%= t("home.tabs_two") %></button>
-          <button class="" onclick="openCity('Tokyo')"><%= t("home.tabs_three") %></button>
-          <button class="" onclick="openCity('Bogota')"><%= t("home.tabs_four") %></button>
-          <button class="" onclick="openCity('Lexico')"><%= t("home.tabs_five") %>o</button>
-          <button class="" onclick="openCity('Brussels')"><%= t("home.tabs_six") %>s</button>
+          <button class="" onclick="openCity('London', true)"><%= t("home.tabs_one") %></button>
+          <button class="" onclick="openCity('Paris', true)"><%= t("home.tabs_two") %></button>
+          <button class="" onclick="openCity('Tokyo', true)"><%= t("home.tabs_three") %></button>
+          <button class="" onclick="openCity('Bogota', true)"><%= t("home.tabs_four") %></button>
+          <button class="" onclick="openCity('Lexico', true)"><%= t("home.tabs_five") %>o</button>
+          <button class="" onclick="openCity('Brussels', true)"><%= t("home.tabs_six") %>s</button>
         </div>
       </div>
       <div class="tabs-area">
@@ -265,60 +265,7 @@
 <%= render 'shared/newsletter' %>
 
 <script>
-  function openCity(cityName) {
-    var i;
-    var x = document.getElementsByClassName("city");
-    for (i = 0; i < x.length; i++) {
-      x[i].style.display = "none";
-    }
-    const city = document.getElementById(cityName)
-    city.style.display = "flex";
-    tabTimer();
-  }
 
-  // =======================
-  // TabTimer
-  // =======================
-  const tabTimer = () => {
-    const tabAreas = document.querySelectorAll('.city')
-    tabAreas.forEach((area) => {
-      if(area.getAttribute('style') == "display: flex;") {
-        const progressHolder = area.firstElementChild.getElementsByTagName('span')[0]
-        const progress = progressHolder.firstElementChild
-        progress.style.width = '1%'
-        var width = 1;
-        var id = setInterval(frame, 50);
-        function frame() {
-          if (width >= 100) {
-            clearInterval(id);
-            tabSwitcher(area);
-          } else {
-            width += 1;
-            progress.style.width = width + "%";
-          }
-        }
-      }
-    })
-  }
-  tabTimer()
-
-  // =======================
-  // TabSwitcher
-  // =======================
-  const tabSwitcher = (area) => {
-    console.log(area)
-    const tabs = document.querySelectorAll('.cityTab')
-    const tabCities = []
-    tabs.forEach((tab) => {
-      tabCities.push(tab.dataset.city)
-    })
-    const nextCity = tabCities[tabCities.indexOf(area.id) + 1]
-    if(tabCities.indexOf(area.id) == 5) {
-      openCity("London")
-    } else {
-      openCity(nextCity)
-    }
-  }
   var words = JSON.parse(document.getElementById('span_scroll').dataset.array)
   var i = 0;
   function insert_span(a){
@@ -340,4 +287,83 @@
       }, 5000  * (i + 1));
   }
   loopForever();
+
+  // =======================
+  // Tab Display Switcher
+  // =======================
+
+  let cancelAnimation = false;
+
+  function openCity(cityName, humanInteraction) {
+    var i;
+    var x = document.getElementsByClassName("city");
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none";
+    }
+    const city = document.getElementById(cityName)
+    city.style.display = "flex";
+    if(humanInteraction == true) {
+      cancelAnimation = true
+      tabTimer(humanInteraction);
+    } else {
+      cancelAnimation = false
+      tabTimer(humanInteraction);
+    }
+  }
+
+  // =======================
+  // Tab Timer
+  // =======================
+  const tabTimer = (humanInteraction) => {
+    const tabAreas = document.querySelectorAll('.city')
+    tabAreas.forEach((area) => {
+      if(area.getAttribute('style') == "display: flex;") {
+        console.log(area.id)
+        const progressHolder = area.firstElementChild.getElementsByTagName('span')[0]
+        const progress = progressHolder.firstElementChild
+        progress.style.width = '1%'
+        var width = 1;
+        console.log(cancelAnimation)
+        if(cancelAnimation == false) {
+          var id = setInterval(frame, 20);
+        } else {
+          clearInterval(id);
+        }
+        if(humanInteraction == true) {
+          var id = setInterval(frame, 20);
+        }
+        function frame() {
+          if (width >= 100) {
+            clearInterval(id);
+            if(cancelAnimation == true && humanInteraction == false) {
+            } else {
+              tabSwitcher(area);
+            }
+          } else {
+            width += 1;
+            progress.style.width = width + "%";
+          }
+        }
+      }
+    })
+  }
+  tabTimer(false)
+
+  // =======================
+  // Auto Tab Switcher
+  // =======================
+  const tabSwitcher = (area) => {
+    const tabs = document.querySelectorAll('.cityTab')
+    const tabCities = []
+    tabs.forEach((tab) => {
+      tabCities.push(tab.dataset.city)
+    })
+    const nextCity = tabCities[tabCities.indexOf(area.id) + 1]
+    // cancelAnimation = false
+    if(tabCities.indexOf(area.id) == 5) {
+      openCity("London")
+    } else {
+      openCity(nextCity, false)
+    }
+  }
 </script>
