--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,8 +3,9 @@
   <%= cl_image_tag("inks_little_pill_pahv4x.png", :quality=>"auto", class: "news-pill-bottom") %>
   <div class="post-show-container">
     <h1><%= @post.title %></h1>
-    <p>Reading time <%= @post.time %> mins</p>
-    <%= cl_image_tag @post.image %>
+    <p>Reading time: <%= @post.reading_time %> mins</p>
+    <%#= cl_image_tag @post.image %>
+    <%= image_tag "https://images.unsplash.com/photo-1503694978374-8a2fa686963a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" %>
     <div class="post-show-details">
       <div class="post-show-social-media">
         <p class="padding-15"><%= @post.created_at.strftime("%B %d, %Y") %></p>
@@ -28,19 +29,23 @@
     </div>
   </div>
   <div class="post-show-last">
-    <h1>Latest Story</h1>
-    <div class="post-show-last-cards">
-      <% @posts.last(3).each do |post| %>
-          <div class="post-show-card">
-            <%= link_to post_path(post) do %>
-              <%= cl_image_tag post.image %>
-            <% end %>
-            <div class="post-show-card-text">
-              <h6><%= post.title %></h6>
-              <p class="post-mini-text"><%= simple_format @post.text %></p>
+    <h1 class="mb-4">Latest Story</h1>
+      <div class="row">
+        <% @posts.last(3).each do |post| %>
+          <div class="col-12 col-sm-6 col-md-4">
+            <div class="post-show-card">
+              <%= link_to post_path(post) do %>
+                <%#= cl_image_tag post.image %>
+                <%= image_tag "https://images.unsplash.com/photo-1503694978374-8a2fa686963a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" %>
+              <% end %>
+              <div class="post-show-card-text">
+                <h6 class="m-0"><%= post.title %></h6>
+                <p class="post-mini-text"><%= post.text.truncate(100) %></p>
+              </div>
             </div>
           </div>
-      <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
