--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,8 +4,7 @@
   <div class="post-show-container">
     <h1><%= @post.title %></h1>
     <p>Reading time: <%= @post.reading_time %> mins</p>
-    <%#= cl_image_tag @post.image %>
-    <%= image_tag "https://images.unsplash.com/photo-1503694978374-8a2fa686963a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" %>
+    <%= cl_image_tag @post.image %>
     <div class="post-show-details">
       <div class="post-show-social-media">
         <p class="padding-15"><%= @post.created_at.strftime("%B %d, %Y") %></p>
@@ -35,8 +34,7 @@
           <div class="col-12 col-sm-6 col-md-4">
             <div class="post-show-card">
               <%= link_to post_path(post) do %>
-                <%#= cl_image_tag post.image %>
-                <%= image_tag "https://images.unsplash.com/photo-1503694978374-8a2fa686963a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" %>
+                <%= cl_image_tag post.image %>
               <% end %>
               <div class="post-show-card-text">
                 <h6 class="m-0"><%= post.title %></h6>
