--- a/app/assets/stylesheets/pages/_fxone_remote.scss
+++ b/app/assets/stylesheets/pages/_fxone_remote.scss
@@ -2,6 +2,10 @@
   overflow: hidden;
 }
 
+.fxone-first-section-background {
+  background: linear-gradient(#EBEFF6, #F6F7FA);
+}
+
 .fxone-first-section-wrapper {
   padding-top: 100px;
   padding-bottom: 0;
