--- a/app/views/pages/distributor.html.erb
+++ b/app/views/pages/distributor.html.erb
@@ -1,16 +1,12 @@
 <div class="distributor-wrapper">
-  <div class="distributor-first-section-wrapper">
-    <div class="distributor-section">
-      <div class="distributor-left-section-text">
+  <div class="first-section fxone-first-section-background mobile-column">
+      <div class="first-section-text">
         <h1 class=""><%= t("distributor.first_section_title") %></h1>
         <p class="paragraph-text"><%= t("distributor.first_section_text") %></p>
         <%= image_tag 'about-dots.png', class: 'distributor-dots' %>
       </div>
-      <div class="distributor-first-section-right d-flex justify-content-center">
         <%#= cl_image_tag("distributor-continents_l9lnki.png", :quality=>"auto", class: "distributor-graphic") %>
-        <%= image_tag 'map-animation.gif', class: 'distributor-first-section-image' %>
-      </div>
-    </div>
+        <%= image_tag 'map-animation.gif', class: 'first-section-image' %>
   </div>
   <div class="distributor-second-section-wrapper">
     <div class="container-countries">
