--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,9 +13,7 @@
       <h1><%= t("home.title") %>  <span id="span_scroll" class="animated" data-array="<%= [t("home.title_span2"), t("home.title_span3"), t("home.title_span1")].to_json %>"><span class="animated-span"><%= t("home.title_span1") %></span></span></h1>
       <p><%= t("home.title_description") %></p>
     </div>
-    <div class="first-section-image">
-      <%= cl_image_tag("Foenix-machine_iqmh2t.png", :quality=>"auto") %>
-    </div>
+    <%= cl_image_tag("Foenix-machine_iqmh2t.png", class: "first-section-image") %>
   </div>
   <div class="second-section">
     <%= cl_image_tag("Foenix-first-section-svg_ykndwi.png", :quality=>"auto", class: "first-section-svg-2") %>
