--- a/app/assets/stylesheets/pages/_software.scss
+++ b/app/assets/stylesheets/pages/_software.scss
@@ -3,6 +3,13 @@
   overflow: hidden;
 }
 
+.software-first-title {
+  margin-bottom: 50px;
+  @include for-phone-only {
+    margin: 0;
+  }
+}
+
 .software-first-section-left {
   display: block;
   margin-top: 20px;
@@ -32,7 +39,7 @@
   right: -80px;
   top: 0;
   width: 250px;
-  z-index: 2;
+  z-index: 1;
   @include for-phone-only {
     right: -110px;
     top: 60px;
@@ -49,7 +56,7 @@
 }
 
 .software-graphic-mobile {
-  margin: 100px 0;
+  margin: 0 calc(50% - 45%);
 }
 
 .software-second-section-wrapper {
