--- a/app/views/pages/inks_and_consumables.html.erb
+++ b/app/views/pages/inks_and_consumables.html.erb
@@ -1,15 +1,10 @@
 <div class="inks-wrapper">
-  <div class="inks-first-section-wrapper">
+  <div class="first-section fxone-first-section-background">
     <%= cl_image_tag("inks_big_pill_dqob2a.png", :quality=>"auto", class: "inks-big-pill") %>
-    <div class="container">
-      <div class="inks-section mobile-reverse">
-        <div class="inks-first-section-left no-padding-mobile">
-          <h1 class="responsive-header"><%= t("inks_and_consumables.first_section_text") %></h1>
-        </div>
-        <div class="inks-first-section-right mobile-margin-bottom">
-          <%= cl_image_tag("inks_and_cons_tyoqgi.png", :quality=>"auto", class: "inks-graphic about-graphic-two") %>
-        </div>
-      </div>
+    <div class="first-section-text">
+      <h1 class="w-100"><%= t("inks_and_consumables.first_section_text") %></h1>
+    </div>
+    <%= cl_image_tag("inks_and_cons_tvzb0g.png", class: "first-section-image", style: "max-width: 700px;") %>
     </div>
   </div>
   <div class="inks-second-section-wrapper">
